# fsbuddy-minifilter

./: .gitignore  CMakeLists.txt  main.cpp  minifilter.hpp  minifilter.rc
FSBuddyMiniFilter.dir/Debug/FSBuddyM.A386565D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
